2014-12-05  Mark Lam  <mark.lam@apple.com>

        Gardening: one more build fix for GTK builds.

        * CMakeLists.txt:

2014-12-05  Csaba Osztrogonác  <ossy@webkit.org>

        URTBF, remove duplicated entry due to parallel buildfixing.

        * CMakeLists.txt:

2014-12-05  Csaba Osztrogonác  <ossy@webkit.org>

        URTBF after r176849.

        * CMakeLists.txt: Added WebProcess/InjectedBundle/DOM/InjectedBundleCSSStyleDeclarationHandle.cpp.

2014-12-05  Mark Lam  <mark.lam@apple.com>

        Gardening: another build fix for GTK builds.

        * CMakeLists.txt:

2014-12-05  Mark Lam  <mark.lam@apple.com>

        Gardening: more speculative build fix for GTK builds.

        * CMakeLists.txt:

2014-12-05  Tim Horton  <timothy_horton@apple.com>

        If the action menu hit test times out, a menu with a single separator appears
        https://bugs.webkit.org/show_bug.cgi?id=139320
        <rdar://problem/19158331>

        Reviewed by Beth Dakin.

        * UIProcess/mac/WKActionMenuController.h:
        * UIProcess/mac/WKActionMenuController.mm:
        (-[WKActionMenuController menuNeedsUpdate:]):
        (-[WKActionMenuController _defaultMenuItems]):
        Add a new "TimedOut" state, which we get into if the sync wait for
        didPerformActionMenuHitTest times out. In this case, we'll drop the
        separator item and give up on the menu. This way, the menu will never
        have just a single separator item at the end of menuNeedsUpdate:.

2014-12-05  Mark Lam  <mark.lam@apple.com>

        Gardening: speculative build fix for GTK builds.

        * CMakeLists.txt:

2014-12-05  Anders Carlsson  <andersca@apple.com>

        Fix build.

        * UIProcess/API/Cocoa/APIWebsiteDataStoreCocoa.mm:
        (API::WebsiteDataStore::defaultDataStoreConfiguration):

2014-12-05  Anders Carlsson  <andersca@apple.com>

        Give all web pages a website data store
        https://bugs.webkit.org/show_bug.cgi?id=139317
